added custom routes integration test and made sure you have to be logged in to create a new contact

--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -8,6 +8,7 @@ one:
   website: MyString
   email: MyString
   info: MyText
+  user: tessa
 
 two:
   name: MyString
@@ -17,3 +18,4 @@ two:
   website: MyString
   email: MyString
   info: MyText
+  user: tessa
