updated profile page and added scopes contacts

--- a/test/fixtures/contacts.yml
+++ b/test/fixtures/contacts.yml
@@ -19,3 +19,13 @@ two:
   email: MyString
   info: MyText
   user: tessa
+
+three:
+  name: MyString
+  category: MyString
+  area: MyString
+  phone: 1
+  website: MyString
+  email: MyString
+  info: MyText
+  user: fergal
